# MAPCASTER

./: .gitignore  AGENTS.md  DICES_TZ.md  DnD MAPS.lnk  DnD_MAPS.spec  README.md  Tracker.md  build_exe.bat  build_portable_zip.bat  pyproject.toml  run_dnd_maps.bat  Запуск 3D Probe (D3D11).bat  Запуск 3D Probe (OpenGL).bat  Запуск 3D Probe (Software).bat  Запуск 3D Probe.bat  Запуск Web Dice Probe.bat
adventures/Greshmall/: adventure.json
adventures/Greshmall/fulltown/: scene.json
adventures/Greshmall/Рынок/: scene.json
adventures/Greshmall/Улица/: scene.json
adventures/БАЗА/: adventure.json
adventures/БАЗА/ЛАГЕРЬ/: scene.json
app/: __init__.py  bootstrap.py  main.py
app/core/: app_controller.py  dice_controller.py  event_bus.py  window_manager.py
app/domain/: __init__.py  defaults.py
app/services/: adventure_service.py  dice_service.py  media_service.py  settings_service.py
app/storage/: __init__.py  filesystem_repo.py  serializers.py
app/ui/: __init__.py
app/ui/qml/: BackgroundWindow.qml  DiceRollWindow.qml  DiceWindow.qml  LauncherWindow.qml  MapWindow.qml  ThreeDProbe.qml  WebDiceProbe.qml
app/ui/qml/components/: DiceMainPreviewCacheManager.qml  DiceMainPreviewCacheStore.js  DiceMainPreviewLiveTile.qml  DicePreviewUtils.js  DiceVisualHost.qml  DiceWebOverlay.qml  LauncherLibrarySurface.qml  LauncherRowActionButton.qml  MapDiceOverlay.qml  MediaDropTile.qml  MediaValueUtils.js  SceneEditorSurface.qml  (+1 more)
app/ui/web/: dice_physics.html  dice_preview_d6.html  dice_web_probe.html
docs/: DEPLOY_EXE.md  DICE_WINDOW_SPEC.md  IMPLEMENTATION_SPEC.md
(+18 files in other folders)
