[project]
name = "dnd-maps-assistant"
version = "0.1.0"
description = "DnD maps assistant with launcher, map and background windows"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.8",
]

[project.scripts]
dnd-maps = "app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
